fix input fields alignment bug on mobile devices.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -322,10 +322,16 @@ div#height_upload_div.uploaded{
   img.img-responsive.thumbs-up {
     width: 50%;
   }
+  .middle-name-arabic, .middle-name-english,
+  .first-name-arabic, .family-name-english,
+  .first-name-english, .family-name-arabic
+  {
+    padding: 0px;
+  }
   html, body {
-+    max-width: 100% !important;
-+    overflow-x: hidden;
-+  }
+   max-width: 100% !important;
+    overflow-x: hidden;
+  }
 }
 select {
   -moz-appearance: none;
